--- a/index.html
+++ b/index.html
@@ -1,7 +1,66 @@
 <!DOCTYPE html>
-<html lang="en-US"
+<html lang="en-US">
+
 <head>
-    <meta charset="UTF-8"
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="/Users/brendaramirez/bootcamp/challenges/portfolio/assets/style.css" />
+    <title>Brenda Ramirez Portfolio</title>
+    <style>
+        body{
+            background-color: rgb(227, 200, 160);
+        }
+        a:link, a:visited {
+            background-color: rgb(227, 200, 160);
+            color: black;
+            border: 2px solid black;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        a:hover, a:active {
+            background-color: rgb(209, 178, 132);
+            color: black;
+        }
+    </style>
 </head>
+
+<body>
+    <header class="header">
+        <h1>Brenda Ramirez</h1>
+        <nav class="links">
+            <ul>
+                <li>
+                    <a href=".about me">About Me</a>
+                    <a href=".work">Work</a>
+                    <a href=".contact me">Contact Me</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="content">
+        <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/images/avatar2.png" style="float: left;" />
+        <section class="about me">
+            <h2>About Me</h2>
+            <p>Placeholder for about me section</p>
+        </section>
+        <section class="work">
+            <h2>Work</h2>
+            <li><strong><a href="https://github.com/bramirez09">Github</a></strong></li>            
+            <p>Placeholder for work section</p>
+        </section>
+        <section class="contact me">
+            <h2>Contact Me</h2>
+            <p>Place holder for contact me</p>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+</body>
+
+
+
