--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             text-decoration: none;
             display: inline-block;
         }
-
         a:hover, a:active {
             background-color: rgb(209, 178, 132);
             color: black;
@@ -28,32 +27,37 @@
 
 <body>
     <header class="header">
+        <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/images/avatar3.png" 
+        style="float: left;"
+         />
         <h1>Brenda Ramirez</h1>
         <nav class="links">
             <ul>
                 <li>
-                    <a href=".about me">About Me</a>
-                    <a href=".work">Work</a>
-                    <a href=".contact me">Contact Me</a>
+                    <a href="#about me">About Me</a>
+                    <a href="#work">Work</a>
+                    <a href="#contact me">Contact Me</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <main class="content">
-        <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/images/avatar2.png" style="float: left;" />
-        <section class="about me">
+        <section id="about me">
             <h2>About Me</h2>
             <p>Placeholder for about me section</p>
         </section>
-        <section class="work">
-            <h2>Work</h2>
-            <li><strong><a href="https://github.com/bramirez09">Github</a></strong></li>            
+        <section id="work">
+            <h2>Work</h2>          
             <p>Placeholder for work section</p>
         </section>
-        <section class="contact me">
+        <section id="contact me">
             <h2>Contact Me</h2>
-            <p>Place holder for contact me</p>
+            <li>
+                <a href="bramirez09@icloud.com">Email</a>
+                <a href="https://github.com/bramirez09">Github</a>
+                <a href="https://www.linkedin.com/in/brenda-ramirez-247a46140/">LinkedIn</a>
+            </li>  
         </section>
     </main>
 
