--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--top section of page - includes avatar, name and links to section on page-->
     <header>
-        <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/images/avatar3.png" 
+        <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/assets/images/avatar3.png" 
         style="float: left;" alt="minimal line avatar image"
          />
         <h1>Brenda Ramirez</h1>
@@ -34,10 +34,10 @@
         <section id="work">
             <h2>Work</h2>
             <div class="horiseon">        
-                <a href="https://bramirez09.github.io/horiseon-refactor/"><img src="/Users/brendaramirez/bootcamp/challenges/portfolio/images/horiseon.png" class="bigbox" alt="horiseon project screenshot"/></a>
+                <a href="/Users/brendaramirez/bootcamp/challenges/portfolio/assets/images/horiseon.png" class = "bigbox" alt="horiseon project screenshot"></a>
             </div>
             <div class="flowerpic">
-                <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/images/extrapicture.png" class = "extrapic" alt="flower picture,no link"/>
+                <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/assets/images/extrapicture.png" class = "extrapic" alt="flower picture,no link"/>
             </div>
         </section>
         <section id="contact me">
