--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="/Users/brendaramirez/bootcamp/challenges/portfolio/assets/css/style.css">
+    <link href="/challenges/portfolio/assets/css/style.css" rel="stylesheet" type="text/css" media="screen, projection"/>
     <title>Brenda Ramirez Portfolio</title>
 
 </head>
