--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link href="/challenges/portfolio/assets/css/style.css" rel="stylesheet" type="text/css" media="screen, projection"/>
+    <link href="./assets/css/style.css" rel="stylesheet"/>
     <title>Brenda Ramirez Portfolio</title>
 
 </head>
@@ -11,8 +11,8 @@
 <body>
     <!--top section of page - includes avatar, name and links to section on page-->
     <header>
-        <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/assets/images/avatar3.png" 
-        style="float: left;" alt="minimal line avatar image"
+        <img src="./assets/images/avatar3.png" 
+        style="float: left;" class = "avatar" alt="minimal line avatar image"
          />
         <h1>Brenda Ramirez</h1>
         <nav class="links">
