--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <section id="work">
             <h2>Work</h2>
             <div class="horiseon">        
-                <a href="https://bramirez09.github.io/horiseon-refactor/" ><img src="/Users/brendaramirez/bootcamp/challenges/portfolio/assets/images/horiseon.png" class = "bigbox" alt="horiseon project screenshot"></a>
+                <a href="https://bramirez09.github.io/horiseon-refactor/" ><img src="./assets/images/horiseon.png" class = "bigbox" alt="horiseon project screenshot"></a>
             </div>
             <div class="flowerpic">
-                <img src="/Users/brendaramirez/bootcamp/challenges/portfolio/assets/images/extrapicture.png" class = "extrapic" alt="flower picture,no link"/>
+                <img src="./assets/images/extrapicture.png" class = "extrapic" alt="flower picture,no link"/>
             </div>
         </section>
         <section id="contact me">
