added pocket chanj

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <div class="flowerpic">
                 <a href="https://bosalinas.github.io/ShowBox/"><img src="./assets/images/groupproject1Showbox.png" class = "extrapic" alt="Showbox"/></a>
             </div>
+            <div class="pocket-chang">
+                <a href="https://powerful-fjord-96372-1e2a1c430418.herokuapp.com/"><img src="./assets/images/pocketchanj.png" class = "extrapic" alt="pocketchanj"/></a>
+            </div>
         </section>
         <section id="contact me">
             <h2>Contact Me</h2>
