--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <div class="pocket-chang">
                 <a href="https://powerful-fjord-96372-1e2a1c430418.herokuapp.com/"><img src="./assets/images/pocketchanj.png" class = "extrapic" alt="pocketchanj"/></a>
             </div>
+            <div class="codewizard">
+                <a href="https://codewizard-5cb0dd220207.herokuapp.com/"><img src="./assets/images/codewizard.png" class = "extrapic" alt="codewizard"/></a>
+            </div>
         </section>
         <section id="contact me">
             <h2>Contact Me</h2>
